# socorro

./: .dockerignore  .editorconfig  .env  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .log4brains.yml  .pep8  .prettierrc  .pyup.yml  .readthedocs.yml  .taskcluster.yml  .travis.yml  .yamllint  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  GRAVEYARD.md  INSTALL  INSTALL.md  Makefile  Pipfile  Procfile  README  README.md  README.rst  Vagrantfile  WHATSNEW.rst  adubyday.json  alembic.ini  breakpad_rev.txt  circle.yml.old  contribute.json  crontabber.ini  currentversions.json  docker-compose.override.yml  docker-compose.yml  jest.config.js  justfile  legacy-es-requirements.in  (+20 more)
.circleci/: config.yml
.dependabot/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
1610520/: es_tcid.py  remove_field.py
alembic/: README  env.py  script.py.mako
analysis/: .classpath  .project  build.properties  build.xml  default.properties  hbase_schema
bixie/: .gitignore  .gitmodules  README.md  manage.py  setup.py
config/: alembic.ini-dist  apache.conf-dist  cephcollector.ini-dist  collector.ini  collector.ini-dist  common_database.ini-dist  common_elasticsearch.ini-dist  common_filesystem.ini-dist  common_logging.ini-dist  common_rabbitmq.ini-dist  crashmover.ini-dist  cron_submitter.ini-dist  crontab-dist  crontabber-fetch-adi.ini-dist  crontabber.ini  crontabber.ini-dist  dataservice.ini-dist  local_crontabber.ini-dist  local_crontabber_database.ini-dist  local_crontabber_logging.ini-dist  local_crontabber_postgres.ini-dist  local_standard_postgres.ini-dist  middleware.ini  middleware.ini-dist  monitor.ini  monitor.ini-dist  processor.ini  processor.ini-dist  rabbitmq-collector.ini-dist  rabbitmq-crashmover.ini-dist  rabbitmq-middleware.ini-dist  rabbitmq-processor.ini-dist  readme.txt  reprocess_crashlist.ini-dist  setupdb_app.ini.dist  socorro.conf  test_automatic_emails.ini-dist  test_elasticsearch_indexing.ini-dist  test_serverstatus.ini-dist
crashstats/: urls.py
crontabber/: package-lock.json  package.json
docker/: Dockerfile  Dockerfile.crontabber  Dockerfile.docs  Dockerfile.fakesentry  Dockerfile.gcs-emulator  Dockerfile.oidcprovider  Dockerfile.processor  Dockerfile.pubsub  Dockerfile.python3  Dockerfile.webapp  README.rst  as_me.sh  create_weekly_tables.py  fetch_normalization_data.py  run_build_docs.sh  run_crontabber.sh  run_dependency_checks.sh  run_ftpscraper_wrapper.sh  run_lint.sh  run_lints_in_docker.sh  run_mdswshell.sh  run_oidcprovider.sh  run_processor.sh  run_pubsub.sh  run_recreate_s3_buckets.sh  run_setup.sh  run_setup_elasticsearch.sh  run_setup_postgres.sh  run_setup_pubsub.sh  run_socorro_aws.sh  run_submitter.sh  run_test.sh  run_tests.sh  run_tests_in_docker.sh  run_tests_python3.sh  run_update_data.sh  run_update_release_data.sh  run_webapp.sh  run_webpack.sh  set_up_awscli.sh  (+6 more)
docs/: Makefile  README-mod-python.txt  README-standalone-collector.txt  README-standalone-processor.txt  README.txt  addaservice.rst  addingmiddleware.rst  adr_log.rst  annotations.rst  breakpad-schema.graphml  breakpad.graffle  breakpad.rst  codeanddatabaseupdate.rst  codingconventions.rst  collector.rst  commonconfig.rst  conf.py  configuration.rst  configuring-crash-stats.rst  configuring-socorro.rst  contributing.rst  correlations.rst  coveragetesting.rst  crashmover.rst  crashpings.rst  crashqueue.rst  crashreprofilteringreport.rst  crashstorage.rst  creatingmatviews.rst  crontabber.rst  database.rst  databaseadminfunctions.rst  databaseananalystfunctions.rst  databasedatetimefunctions.rst  databasemiscfunctions.rst  databaseschema.rst  databasescripts.rst  databasesetup.rst  databasetabledesc.rst  databasetablesbysource.rst  (+72 more)
e2e-tests/: .dockerignore  .gitignore  .pyup.yml  Dockerfile  Jenkinsfile  Pipfile  README.md  pipenv.txt  requirements.txt  setup.cfg  tox.ini
fakecollector/: collector.py
minidump-stackwalk/: Makefile  README.rst  common.h  dumplookup.cc  get-minidump-instructions.cc  http_symbol_supplier.cc  http_symbol_supplier.h  jit-crash-categorize.cc  stackwalker.cc  taskcluster_script.txt
processor/: Procfile
product_details/: Fenix.json  Fennec.json  FennecAndroid.json  Firefox.json  FirefoxEnterprise.json  FirefoxReality.json  Focus.json  GeckoView.json  GeckoViewExample.json  MozillaVPN.json  README.rst  ReferenceBrowser.json  SeaMonkey.json  Thunderbird.json
puppet/: ubuntu-bootstrap.sh
requirements/: compiled.txt  constraints.txt  default.txt  dev.txt  prod.txt
schemas/: processed_crash.json  validate_and_test.py
scripts/: 1463121-signatures-migration.sql  1493768-bug-associations-migration.sql  1498441-platform-migration.sql  1503383-drop-everything.sql  activate_socorro  add_crashid_to_queue.py  analysis.sh  bootstrap  bootstrap.sh  breakpad-taskcluster.sh  build-breakpad.sh  build-smarter.sh  build-stackwalker.sh  build.sh  cibuild  clean.sh  cmp_hbase_s3.py  collector-loadtesting.py  collector.py  createPartitions.py  defaults  delete_crash_data.py  deploy-dockerhub.sh  deploy.sh  deploy_bug.py  dist-make-test-database.py  dist-pylons.py  dist-standalone-collector.py  dist-standalone-processor.py  docs.sh  elasticsearch-integration-test.sh  elasticsearch_backfill_app.py  fetch_crash_data.py  fetch_crashids.py  find_crashes_with_field.py  find_crashids.py  hbaseToNFS.py  hive_adi_test.py  insert_missing_versions.py  install.sh  (+87 more)
socorro/: __init__.py  libclass.py  libmarkus.py  mozilla_rulesets.py  mozilla_settings.py  statsd_metrics.yaml
sql/: facts-create.ddl.sql  facts-rollback.ddl.sql  roles.sql  schema.sql  scrub.sql  server_status_sql.txt  socorro.sql
testcrash/: 7d381dc5-51e2-4887-956b-1ae9c2130109.dump  7d381dc5-51e2-4887-956b-1ae9c2130109.json  processed_crash.json  raw_crash.json
tools/: loadjsonz.py  submit_crash_to_rabbitmq.py  trigger  webqapassing.py
webapp-django/: .babelrc  .eslintignore  (+13 more)
(+3810 files in other folders)
