[project]
name = "socorro"
description = "Socorro is a server to process Breakpad crash reports."
readme = "README.rst"
version = "1.0.0"  # Required, but unused
requires-python = "==3.11.*"
dependencies = [
    "attrs==25.4.0",
    "boltons==25.0.0",
    "click==8.2.1",
    "contextlib2==21.6.0",
    "datadog==0.52.1",
    "dj-database-url==3.1.0",
    "django==5.2.11",
    "django-cors-headers==4.9.0",
    "django-csp==4.0",
    "django-jinja==2.11.0",
    "django-npm==1.0.1",
    "django-pipeline==4.1.0",
    "django-ratelimit==4.1.0",
    "django-waffle==2.3.0",
    "djangorestframework==3.16.1",
    "dockerflow==2026.1.26",
    "elasticsearch==9.2.0",
    "enforce-typing==1.0.0.post1",
    "everett==3.5.0",
    "fillmore==2.2.0",
    "freezegun==1.5.5",
    "glom==25.12.0",
    "google-cloud-pubsub==2.34.0",
    "google-cloud-storage==3.8.0",
    "gunicorn==25.0.0",
    "honcho==2.0.0",
    "humanfriendly==10.0",
    "inotify-simple==2.0.1",
    "isodate==0.7.2",
    "isoweek==1.3.3",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markus[datadog]==5.2.0",
    "more-itertools==10.8.0",
    "mozilla-django-oidc==5.0.2",
    "oauth2client==4.1.3",
    "obs-common==2026.1.21",
    "psycopg2-binary==2.9.11",
    "pygments==2.19.2",
    "pymemcache==4.0.0",
    "pyquery==2.0.1",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "pytest-env==1.2.0",
    "python-decouple==3.8",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-mock==1.12.1",
    "ruff==0.14.14",
    "semver==3.0.4",
    "sentry-sdk==2.17.0",
    "sphinx==9.0.4",
    "sphinx-rtd-theme==3.1.0",
    "statsd==4.0.1",
    "urlwait==1.0",
    "werkzeug==3.1.5",
    "whitenoise==6.11.0",
]

[dependency-groups]
devcontainer = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/mozilla-services/socorro"

[tool.uv]
environments = ["""
    sys_platform == 'linux' and
    platform_machine == 'x86_64' and
    implementation_name == 'cpython'
"""]
package = false

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"

[tool.uv.sources]
obs-common = { index = "cavendish" }

[tool.ruff]
line-length = 88

# NOTE(willkg): Need to keep using Python 3.8 until socorro-siggen drops
# support for it
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]

# Ignore line length violations
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.release]
github_user = "mozilla-services"
github_project = "socorro"
bugzilla_product = "Socorro"
bugzilla_component = "Infra"
main_branch = "main"
tag_name_template = "v%Y.%m.%d"


[tool.paul-mclendahand]
github_user = "mozilla-services"
github_project = "socorro"
main_branch = "main"


[tool.service-status]
main_branch = "main"
hosts = [
    "stage=https://crash-reports.allizom.org",
    "stage=https://crash-stats.allizom.org",
    "prod=https://crash-reports.mozilla.com",
    "prod=https://crash-stats.mozilla.org"
]
