[project]
name = "socorro"
description = "Socorro is a server to process Breakpad crash reports."
readme = "README.rst"
version = "1.0.0"  # Required, but unused
requires-python = "==3.11.*"
dependencies = [
    "attrs",
    "boltons",
    "click",
    "contextlib2",
    "datadog",
    "dj-database-url",
    "django~=5.2.11",
    "django-cors-headers",
    "django-csp",
    "django-jinja",
    "django-npm",
    "django-pipeline",
    "django-ratelimit",
    "django-waffle",
    "djangorestframework",
    "dockerflow",
    "elasticsearch~=9.2",
    "enforce-typing",
    "everett",
    "fillmore",
    "freezegun",
    "glom",
    "google-cloud-pubsub",
    "google-cloud-storage",
    "gunicorn",
    "honcho",
    "humanfriendly",
    "inotify-simple",
    "isodate",
    "isoweek",
    "jinja2",
    "jsonschema",
    "lxml",
    "markdown-it-py",
    "markus[datadog]",
    "more-itertools",
    "mozilla-django-oidc",
    "oauth2client",
    "obs-common",
    "psycopg2-binary",
    "pygments",
    "pymemcache",
    "pyquery",
    "pytest",
    "pytest-django",
    "pytest-env",
    "python-decouple",
    "pyyaml",
    "requests",
    "requests-mock",
    "ruff",
    "semver",
    "sentry-sdk",
    "sphinx",
    "sphinx-rtd-theme",
    "statsd",
    "urlwait",
    "werkzeug",
    "whitenoise",
]

[dependency-groups]
devcontainer = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/mozilla-services/socorro"

[tool.uv]
environments = ["""
    sys_platform == 'linux' and
    platform_machine == 'x86_64' and
    implementation_name == 'cpython'
"""]
package = false

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"

[tool.uv.sources]
obs-common = { index = "cavendish" }

[tool.ruff]
line-length = 88

# NOTE(willkg): Need to keep using Python 3.8 until socorro-siggen drops
# support for it
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]

# Ignore line length violations
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.release]
github_user = "mozilla-services"
github_project = "socorro"
bugzilla_product = "Socorro"
bugzilla_component = "Infra"
main_branch = "main"
tag_name_template = "v%Y.%m.%d"


[tool.paul-mclendahand]
github_user = "mozilla-services"
github_project = "socorro"
main_branch = "main"


[tool.service-status]
main_branch = "main"
hosts = [
    "stage=https://crash-reports.allizom.org",
    "stage=https://crash-stats.allizom.org",
    "prod=https://crash-reports.mozilla.com",
    "prod=https://crash-stats.mozilla.org"
]
